<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.asuc.asucmobile.main.StartStopSelectActivity">

    <LinearLayout
        android:id="@+id/start_dest_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@color/ASUC_blue"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_action_back"
                android:contentDescription="@string/content_desc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ASUC_blue"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <Button
                android:id="@+id/select_start"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="start|center"
                android:textColor="@color/grizzly_gray"
                android:background="@color/pavan_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <Button
                android:id="@+id/select_dest"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:gravity="start|center"
                android:textColor="@color/grizzly_gray"
                android:background="@color/pavan_light" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/two_chainz_gold" />

    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/start_dest_control" />

</RelativeLayout>
